--- a/branches/migration/src/migratedata/HeadingMigrate.form
+++ b/branches/migration/src/migratedata/HeadingMigrate.form
@@ -96,7 +96,6 @@
     <Component class="javax.swing.JTextField" name="jTextField1">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
-        <Property name="text" type="java.lang.String" value="sd"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
@@ -131,7 +130,6 @@
             <Property name="columns" type="int" value="20"/>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="rows" type="int" value="5"/>
-            <Property name="text" type="java.lang.String" value="sds"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -145,6 +143,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Speichern &amp; weiter"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane2">
       <AuxValues>
