--- a/branches/sven/report/templates/Protokoll.jrxml
+++ b/branches/sven/report/templates/Protokoll.jrxml
@@ -16,6 +16,7 @@
 	<parameter name="Teilnehmer" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="Sonstige" class="java.lang.String" isForPrompting="false"/>
 	<parameter name="IMAGE" class="java.lang.String"/>
+	<parameter name="Tagesordnung" class="java.lang.String"/>
 	<field name="Kategorie" class="java.lang.String"/>
 	<field name="Bereich" class="java.lang.String"/>
 	<field name="Institution" class="java.lang.String"/>
@@ -160,19 +161,6 @@
 					<pen lineWidth="1.0" lineStyle="Solid"/>
 				</graphicElement>
 			</line>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement key="textField-5" positionType="Float" stretchType="RelativeToBandHeight" x="5" y="106" width="258" height="107"/>
-				<box leftPadding="2">
-					<topPen lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement>
-					<font fontName="Tahoma" size="11"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{Tagesordnung}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement key="staticText-7" x="3" y="82" width="101" height="20"/>
 				<box>
@@ -250,6 +238,13 @@
 					<font fontName="Tahoma" size="11"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{Sonstige}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="5" y="107" width="255" height="106"/>
+				<textElement>
+					<font fontName="Tahoma" size="11"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{Tagesordnung}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
